Fix scrollbars style in Chrome #PL-5850

--- a/modules/web/themes/halo/app/app-scrollbar.scss
+++ b/modules/web/themes/halo/app/app-scrollbar.scss
@@ -33,13 +33,11 @@ $cuba-scrollbar-border-color: first-color(valo-border()) !default;
   }
 
   ::-webkit-scrollbar-track:vertical {
-    border-top: 0px;
-    border-bottom: 0px;
+    border-bottom: 0;
   }
 
   ::-webkit-scrollbar-track:horizontal {
-    border-left: 0px;
-    border-right: 0px;
+    border-right: 0;
   }
 
   // ========== thumb ==========
@@ -52,21 +50,20 @@ $cuba-scrollbar-border-color: first-color(valo-border()) !default;
 
   ::-webkit-scrollbar-thumb:hover {
     border-color: $v-focus-color;
-    box-shadow: inset 0px 0px 1px 1px rgba($v-focus-color, 0.5);
+    box-shadow: inset 0 0 1px 1px rgba($v-focus-color, 0.5);
   }
 
   ::-webkit-scrollbar-thumb:active {
     @include cuba-scrollbar-secondary-background-color-style($cuba-scrollbar-background-primary-color);
     border-color: $v-focus-color;
-    box-shadow: inset 0px 0px 1px 1px rgba($v-focus-color, 0.5);
+    box-shadow: inset 0 0 1px 1px rgba($v-focus-color, 0.5);
   }
 
   // ========== corner ==========
 
   ::-webkit-scrollbar-corner {
     @include cuba-scrollbar-secondary-background-color-style($cuba-scrollbar-background-primary-color);
-    border-right: 1px solid $cuba-scrollbar-border-color;
-    border-bottom: 1px solid $cuba-scrollbar-border-color;
+    border: 1px solid $cuba-scrollbar-border-color;
   }
 }
 
